# whatsapp-parser-tool

./: .gitignore  README.md  build.sh  debug.py  pyproject.toml  readme.md  render_start.sh  requirements.txt
.github/workflows/: tests.yml
apps/core/: models.py  rag_graph.py  tests.py  tools.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py  0002_listingchunk_delete_listing.py  0003_rename_bathrooms_listingchunk_bhk_and_more.py  0004_chatmessage.py
apps/core/utils/: html_sanitiser.py
apps/embeddings/: vector_store.py  vectoriser.py
apps/ingestion/: admin.py  forms.py  models.py  pipeline.py  tasks.py  tests.py  urls.py  views.py  widgets.py
apps/ingestion/dedupe/: dupe_tracker.py  pre_llm_dedupe.py
apps/ingestion/migrations/: 0001_initial.py  0002_rawfile_status.py  0003_fileprocess.py  0004_rawfile_owner_rawmessagechunk_user.py  0005_alter_rawfile_status.py  0006_rawfile_dedupe_stats.py
apps/ingestion/parsers/: whatsapp_parser.py
apps/preprocessing/: apps.py  extractor.py  models.py  tasks.py  tests.py
apps/preprocessing/migrations/: 0001_initial.py  0002_add_pgvector_column.py  0003_backfill_vectors.py  0004_drop_json_column.py  0005_create_hsnw_index.py  (+2 more)
apps/users/: forms.py  models.py  urls.py  views.py
config/: celery.py  settings.py  urls.py
core/: tests.py  urls.py  views.py
rust_parser/whatsapp-parser/: Cargo.toml
static/js/: progress_poller.js
templates/: base.html
templates/core/: chat.html
templates/ingestion/: upload_form.html  upload_success.html  uploads_list.html
templates/users/: login.html
(+6 files in other folders)
